[gd_scene load_steps=5 format=3 uid="uid://dhhjltxmoydio"]

[ext_resource type="Script" uid="uid://qp1u2d0q1xmp" path="res://Scenes and Scripts/Scenes/Player/Inventory/InventorySlot_SCRIPT.gd" id="1_bxl3d"]
[ext_resource type="Texture2D" uid="uid://dynk4aytqg20" path="res://Textures/Inventory/Slot/InventorySlotTexture.png" id="2_2mtlq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hbs3"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5yu5"]
size = Vector2(32, 32)

[node name="InventorySlot" type="StaticBody2D" groups=["slot"]]
script = ExtResource("1_bxl3d")

[node name="AlreadyPopulatedChecker" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="Texture" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.78, 0.78)
texture = ExtResource("2_2mtlq")
expand_mode = 1

[node name="Draggable Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Draggable Detector"]
shape = SubResource("RectangleShape2D_5hbs3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q5yu5")

[connection signal="area_entered" from="Draggable Detector" to="." method="_on_draggable_detector_area_entered"]
[connection signal="area_exited" from="Draggable Detector" to="." method="_on_draggable_detector_area_exited"]
